--- a/app/src/main/res/menu/bottom_navigation_teacher_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_teacher_menu.xml
@@ -24,5 +24,5 @@
         android:id="@+id/bottomNavMenuSettingsTeacher"
         android:enabled="true"
         android:icon="@drawable/icon_settings"
-        android:title="@string/write_a_review"/>
+        android:title="@string/settings"/>
 </menu>
