--- a/app/src/main/res/menu/three_dot_menu.xml
+++ b/app/src/main/res/menu/three_dot_menu.xml
@@ -12,8 +12,8 @@
     <item
         android:id="@+id/search_home"
         android:title="Search"
-        app:showAsAction="always"
+        app:showAsAction="always|collapseActionView"
         android:icon="@drawable/search"
-        app:actionViewClass="android.widget.SearchView"/>
+        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 
 </menu>
