--- a/app/src/main/res/layout/teachers_viewof_course_settings.xml
+++ b/app/src/main/res/layout/teachers_viewof_course_settings.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/icon_tick"
-            android:id="@+id/updateChange"/>
 
         <LinearLayout
             android:id="@+id/linearLayoutCourseInfo"
@@ -123,6 +115,14 @@
             android:gravity="center_vertical"
             android:layout_below="@id/divider1"
             android:layout_centerHorizontal="true"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/icon_tick"
+            android:id="@+id/updateChange"
+            android:layout_alignTop="@id/textEditCourseInfo"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -169,7 +169,7 @@
                     android:padding="3dp"/>
                 <EditText
                     android:id="@+id/editTextCourseDescription"
-                    android:inputType="text"
+                    android:inputType="textMultiLine"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="12dp"
