--- a/app/src/main/res/layout/activity_explore_courses.xml
+++ b/app/src/main/res/layout/activity_explore_courses.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <ProgressBar
         android:id="@+id/loadingExplore"
         android:layout_width="wrap_content"
@@ -13,6 +14,49 @@
         android:layout_centerHorizontal="true"
         android:indeterminateTint="@color/colorPrimary"/>
 
+    <com.google.android.material.tabs.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabMode="scrollable"
+        android:id="@+id/tabLayout"
+        android:background="@color/colorPrimary"
+        app:tabTextColor="@color/colorWhite"
+        app:tabIndicatorHeight="5dp"
+        app:tabIndicatorColor="@color/colorLiteGrey">
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TOP FREE"/>
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TOP RATED"/>
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NEAR YOU"/>
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TOP ONLINE"/>
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/filter_categories_list"
+        android:layout_below="@id/tabLayout"
+        android:layout_marginTop="12dp"/>
+
+    <FrameLayout
+        android:id="@+id/exploreFrame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/text_view_login"
+        android:visibility="gone"
+        android:layout_below="@id/filter_categories_list"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/exploreList"
         android:layout_width="match_parent"
@@ -20,7 +64,8 @@
         android:orientation="vertical"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:background="@drawable/text_view_login"
-        android:layout_above="@id/linearLayoutPageNumber"/>
+        android:layout_above="@id/linearLayoutPageNumber"
+        android:layout_below="@id/exploreFrame"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
