--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,7 +117,8 @@
                     android:orientation="horizontal"
                     android:scrollbars="horizontal"
                     android:layout_below="@id/textExploreCoursesList"
-                    android:layout_margin="5dp"/>
+                    android:layout_margin="5dp"
+                    tools:itemCount="5"/>
                 <!--<ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
