Add category inputs to Add Course page

--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -105,7 +105,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Add a category tag"
-                android:layout_margin="@dimen/text_margin"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:background="@drawable/btn_blue"
                 android:elevation="100dp"
                 android:textColor="@color/colorWhite"
@@ -125,9 +126,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
+                android:background="@drawable/btn_blue"
                 android:padding="3dp"
-                android:layout_margin="18sp"
+                android:layout_marginHorizontal="18sp"
+                android:layout_marginBottom="18sp"
                 android:textColor="@color/colorWhite"
                 android:id="@+id/textCategoriesSelected"
                 android:visibility="gone"/>
