Displayed Search Results for the home page

--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AddCourseActivity">
 
     <!--
@@ -180,6 +181,21 @@
                 android:textSize="@dimen/text_margin"
                 android:textStyle="bold"
                 android:checked="true"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnCourseLocation"
+                android:background="@drawable/btn_blue"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:text="Add Course Location"
+                android:textColor="@color/colorWhite"
+                android:drawableStart="@drawable/icon_location"
+                android:drawableTint="@color/colorWhite"
+                android:gravity="center"
+                android:drawablePadding="10dp"
+                android:visibility="gone"/>
+
 
             <!--
             <RadioGroup
