--- a/app/src/main/res/menu/home_drawer_menu.xml
+++ b/app/src/main/res/menu/home_drawer_menu.xml
@@ -19,17 +19,17 @@
         android:title="Title 5"
         android:id="@+id/homeDrawerMenuItem5"/>
     <item
-        android:title="More"
+        android:title="@string/more"
         android:id="@+id/more">
         <menu>
             <item
-                android:title="About us"
+                android:title="@string/about_us"
                 android:id="@+id/about"/>
             <item
-                android:title="Terms and Conditions"
+                android:title="@string/terms_and_conditions"
                 android:id="@+id/tc"/>
             <item
-                android:title="Contact us"
+                android:title="@string/contact_us"
                 android:id="@+id/contactUs"/>
             <item
                 android:title="@string/faq"
