--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,4 +47,8 @@
         <item name="android:elevation">0dp</item>
     </style>
 
+    <style name="DatePicker" parent="ThemeOverlay.MaterialComponents.MaterialCalendar">
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
 </resources>
