--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -36,8 +36,9 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/btnNext"
         android:layout_below="@id/loadingAddCourse"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/btnNext"
         android:layout_margin="@dimen/activity_horizontal_margin">
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,6 +54,7 @@
                 android:scaleType="centerCrop"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
+                android:layout_marginBottom="20dp"
                 android:layout_gravity="center_horizontal">
 
                 <ImageView
@@ -109,7 +111,7 @@
                 android:layout_height="wrap_content"
                 android:text="Add a category tag"
                 android:layout_marginHorizontal="@dimen/text_margin"
-                android:layout_marginVertical="4dp"
+                android:layout_marginVertical="10dp"
                 android:background="@drawable/btn_blue"
                 android:elevation="100dp"
                 android:textColor="@color/colorWhite"
@@ -142,7 +144,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginHorizontal="@dimen/text_margin"
-                android:layout_marginVertical="4dp"
+                android:layout_marginVertical="10dp"
                 android:weightSum="100">
 
                 <EditText
@@ -178,7 +180,7 @@
                 android:textOff="@string/offline"
                 android:textOn="@string/online"
                 android:layout_marginHorizontal="@dimen/text_margin"
-                android:layout_marginVertical="4dp"
+                android:layout_marginVertical="10dp"
                 android:background="@drawable/btn_multi_select"
                 android:elevation="100dp"
                 android:textColor="@color/colorWhite"
