--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -35,9 +35,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/loadingAddCourse"
-        android:layout_alignParentTop="true"
         android:layout_above="@id/btnNext"
         android:layout_margin="@dimen/activity_horizontal_margin">
         <LinearLayout
