--- a/app/src/main/res/drawable/gradient_dark.xml
+++ b/app/src/main/res/drawable/gradient_dark.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#00116C"
+        android:startColor="@color/colorPrimary"
         android:endColor="@color/colorPrimaryDark"
         android:angle="270" />
 </shape>
