--- a/app/src/main/res/drawable/text_view_login.xml
+++ b/app/src/main/res/drawable/text_view_login.xml
@@ -9,5 +9,9 @@
         android:left="3dp"
         android:right="3dp"/>
     <solid
-        android:color="#50ffffff" />
+        android:color="@color/transparent" />
+    <stroke
+        android:color="@color/colorWhite"
+        android:width="1dp"
+        />
 </shape>
