--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -36,6 +36,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Set this as Course Location"
-        android:id="@+id/setCourseLocation"/>
+        android:id="@+id/setCourseLocation"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/text_margin"/>
 
 </LinearLayout>
