--- a/app/src/main/res/layout/explore_course_recycler_card.xml
+++ b/app/src/main/res/layout/explore_course_recycler_card.xml
@@ -29,7 +29,7 @@
             android:id="@+id/courseInstructor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Upsilon"
+            android:text="@string/app_name"
             android:textSize="14sp"
             android:textStyle="italic"
             android:typeface="serif"
