--- a/app/src/main/res/layout/activity_explore_courses.xml
+++ b/app/src/main/res/layout/activity_explore_courses.xml
@@ -25,18 +25,22 @@
         app:tabIndicatorHeight="5dp"
         app:tabIndicatorColor="@color/colorLiteGrey">
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/topFree"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TOP FREE"/>
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/topRated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TOP RATED"/>
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/nearYou"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="NEAR YOU"/>
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/topOnline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TOP ONLINE"/>
