--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -31,14 +31,22 @@
         android:layout_marginTop="6dp"
         android:visibility="gone"
         android:layout_centerHorizontal="true"
-        android:indeterminateTint="@color/colorPrimary"/>
+        android:indeterminateTint="@color/colorPrimary"
+        android:layout_alignParentTop="true"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:id="@+id/view"
+        android:layout_alignParentTop="true"
+        android:layout_below="@id/loadingAddCourse"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/loadingAddCourse"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/view"
         android:layout_above="@id/btnNext"
-        android:layout_margin="@dimen/activity_horizontal_margin">
+        android:layout_marginTop="24dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,10 +79,10 @@
                     android:layout_height="40dp"
                     android:id="@+id/btnAddCourseImage"
                     android:src="@drawable/icon_add_photo"
-                    android:tint="@color/colorAccent"
                     android:layout_gravity="end"
                     android:layout_margin="12dp"
-                    tools:ignore="ContentDescription" />
+                    tools:ignore="ContentDescription"
+                    app:tint="@color/colorAccent"/>
 
             </FrameLayout>
 
@@ -89,7 +97,8 @@
                 android:padding="10dp"
                 android:layout_marginHorizontal="@dimen/text_margin"
                 android:layout_marginVertical="4dp"
-                android:id="@+id/add_course_name" />
+                android:id="@+id/add_course_name"
+                android:imeOptions="actionDone"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -102,7 +111,8 @@
                 android:padding="10dp"
                 android:layout_marginHorizontal="@dimen/text_margin"
                 android:layout_marginVertical="4dp"
-                android:id="@+id/add_course_description"/>
+                android:id="@+id/add_course_description"
+                android:imeOptions="actionDone|actionNext"/>
 
             <Button
                 android:id="@+id/add_course_category"
@@ -138,6 +148,40 @@
                 android:id="@+id/textCategoriesSelected"
                 android:visibility="gone"/>
 
+            <!--
+            <com.google.android.material.chip.ChipGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/selectedCategoriesDisplayGroup">
+                <com.google.android.material.chip.Chip
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.Chip.Action"
+                    android:text="@string/app_name"
+                    android:textSize="@dimen/text_margin"
+                    app:chipIconEnabled="false"
+                    app:checkedIconEnabled="false"
+                    app:chipIcon="@color/colorRed"/>
+                <com.google.android.material.chip.Chip
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.Chip.Entry"
+                    android:text="@string/app_name"
+                    android:textSize="@dimen/text_margin"/>
+                <com.google.android.material.chip.Chip
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.Chip.Entry"
+                    android:text="@string/app_name"
+                    android:textSize="@dimen/text_margin"/>
+                <com.google.android.material.chip.Chip
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.Chip.Entry"
+                    android:text="@string/app_name"
+                    android:textSize="@dimen/text_margin"/>
+            </com.google.android.material.chip.ChipGroup> -->
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -156,7 +200,8 @@
                     android:background="@drawable/text_view_add_course"
                     android:padding="10dp"
                     android:layout_weight="50"
-                    android:id="@+id/add_course_duration"/>
+                    android:id="@+id/add_course_duration"
+                    android:imeOptions="actionDone"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -384,10 +429,10 @@
         android:layout_marginBottom="4dp"
         android:layout_alignParentBottom="true"
         android:progress="50"
-        android:progressTint="@color/colorPrimary"
+        android:progressTint="@color/colorRed"
         android:progressBackgroundTint="@color/colorGrey"
         android:id="@+id/add_course_progress"
-        android:scaleY="3"/>
+        android:scaleY="2"/>
 
     <Button
         android:id="@+id/btnNext"
@@ -395,6 +440,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="24dp"
+        android:layout_above="@id/add_course_progress"
         android:background="@drawable/btn_blue"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/text_margin"
